cncProd/force-app/main/default/objects/Survey_Call_Log__c/Survey_Call_Log__c.object-meta.xml
<CustomObject>
    <label>Survey Call Log</label>
    <nameField>
        <displayFormat>C-{000000000}</displayFormat>
        <label>Survey Call Log No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Call Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>