cncProd/force-app/main/default/objects/Survey_Call_Log__c/fields/Call_back_Date__c.field-meta.xml
<CustomField>
    <fullName>Call_back_Date__c</fullName>
    <formula>datetimevalue(Call_back_Date_Time__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call back Date</label>
    <type>Date</type>
</CustomField>