cncProd/force-app/main/default/objects/Survey_Call_Log__c/fields/X1st_Agent_code__c.field-meta.xml
<CustomField>
    <fullName>X1st_Agent_code__c</fullName>
    <label>1st Agent code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>