cncProd/force-app/main/default/objects/Survey_Call_Log__c/fields/X1st_Call_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>X1st_Call_Date_Time__c</fullName>
    <label>1st Call Date/Time</label>
    <type>DateTime</type>
</CustomField>