cncProd/force-app/main/default/objects/Survey_Call_Log__c/fields/X1st_Call_Status__c.field-meta.xml
<CustomField>
    <fullName>X1st_Call_Status__c</fullName>
    <label>1st Call Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>