cncProd/force-app/main/default/objects/Survey_Call_Log__c/fields/X1st_Call_Time__c.field-meta.xml
<CustomField>
    <fullName>X1st_Call_Time__c</fullName>
    <formula>MID(TEXT( X1st_Call_Date_Time__c + 0.3333), 12, 5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>1st Call Time</label>
    <type>Text</type>
</CustomField>