cncProd/force-app/main/default/objects/Survey_Call_Log__c/fields/X2nd_Call_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Call_Date_Time__c</fullName>
    <label>2nd Call Date/Time</label>
    <type>DateTime</type>
</CustomField>