cncProd/force-app/main/default/objects/Survey_Call_Log__c/fields/X3rd_Call_Status__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Call_Status__c</fullName>
    <label>3rd Call Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>